--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
+html{
+  height: 100%;
+  background: linear-gradient(#de6262 , #ffb88c);
+}
 body {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
