--- a/src/grid/grid.css
+++ b/src/grid/grid.css
@@ -1,6 +1,8 @@
 .cell {
     width: 80px;
     height: 80px; 
+    text-align: center;
+    position: relative;
     
 }
 .black{
@@ -10,4 +12,63 @@
 .white{
    
     background: #beffdc;
+}
+
+.cell > p{
+   font-size: xxx-large;
+   text-align: center;
+   display: inline;
+    
+}
+.cell .elementSelected{
+    width: 15%;
+    height: 15%;
+    /* text-align: center; */
+    background: saddlebrown;
+    /* transform: translate(350%,350%); */
+    top: 40%;
+    left: 40%;
+    padding: 5px;
+    position: absolute;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border-radius: 50%;
+    border: 1px dashed #000;
+    animation: spin 10s linear infinite;
+    background-clip: border-box;
+}
+
+.cell .coinToPlay{
+    width: 100%;
+    height: 100%;
+    /* text-align: center; */
+    
+    /* transform: translate(350%,350%); */
+    
+    padding: 5px;
+    position: absolute;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border-radius: 50%;
+    border: 1px dashed #000;
+    animation: spin 10s linear infinite;
+    background-clip: border-box;
+}
+@keyframes spin { 
+    100% { 
+      transform: rotateZ(360deg);
+    }
+  }
+@media only screen and (max-width: 765px), only screen and (max-device-width: 765px) {
+
+ 
+    .cell{
+        width: 40px;
+        height: 40px;
+    }
+
+    .cell> p{
+        font-size: xx-large;
+        display: inline;
+    }
 }
