--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,16 @@
   --bgFormElsFocus: hsl(0, 7%, 20%);
 }
 .container{
-  
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+@media only screen and (max-width: 765px), only screen and (max-device-width: 765px) {
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 }
 
 .boardContainer{
