--- a/src/grid/grid.css
+++ b/src/grid/grid.css
@@ -59,6 +59,12 @@
     font-size: xx-large;
     text-align: center;
 }
+.player{
+    width: 10vw;
+    height: 10vw;
+    border: 1px solid green;
+    margin: 0 2vw;
+}
 @keyframes spin { 
     100% { 
       transform: rotateZ(360deg);
